# udp_video

./: README.md  pyproject.toml
client/: __init__.py  capture_thread.py  client.py  encode_thread.py  send_thread.py  video_sender.py
client/common/: jpeg_util.py  press.py
client/diff/: diffproc_fixed.py
client/fec/: fec_high.py  fec_low.py  fec_medium.py  packet_no_fec.py
server/: __init__.py  api_app.py  decode_thread.py  display_thread.py  reassemble_thread.py  recv_thread.py  server.py  video_receiver.py
server/diff/: diffdecode.py
server/fec/: fec_reassembler_high.py  fec_reassembler_low.py  fec_reassembler_mid.py  simple_reassembler.py
udp_video_client.egg-info/: PKG-INFO  SOURCES.txt
